<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="10dp"
    android:paddingTop="56dp"
    style="@style/WindowBackground">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:src="@drawable/escudo_vasco"
        android:contentDescription="@string/escudo_do_vasco"/>

    <TextView
        android:id="@+id/textView"
        android:layout_marginTop="12dp"
        android:layout_width="225dp"
        android:layout_height="78dp"
        android:text="@string/recadastramento_de_socios"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/matricula"
        android:textColorHint="@android:color/white">

        <EditText
            android:id="@+id/input_matricula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:backgroundTint="@android:color/white"
            android:hint="@string/matricula"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/nome"
        android:textColorHint="@android:color/white">

        <EditText
            android:id="@+id/input_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:backgroundTint="@android:color/white"
            android:hint="@string/nome"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/cpf"
        android:textColorHint="@android:color/white">

        <EditText
            android:id="@+id/input_cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:backgroundTint="@android:color/white"
            android:hint="@string/cpf"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buscar_socio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/holo_green_light"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/buscar_socio"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/retorno_vazio"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>